--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-/* nejsme vcerejsi, pouzivame moderni box model */
 *, :after, :before { box-sizing: border-box; }
-
 body {
 	font-family: sans-serif;
 	font-size: 14px;
@@ -8,4 +6,74 @@ body {
 
 h1 {
 	text-align: center;
+}
+
+.osoba {
+    padding: 20px;
+    border: 1px solid #d5d5d5;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 255, 255, 0.15);
+}
+
+.popis h2 {
+    font-size: 18px;
+}
+  
+.popis p {
+    margin-bottom: 0;
+  }
+
+/* pro mobilní telefon*/
+.osoba {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.foto img {
+    border-radius: 50%;
+}
+
+/* pro tablet*/
+@media (min-width: 600px) {
+.tym {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.osoba {
+    width: calc( (100% - 20px) / 2 );
+    display: flex;
+    text-align: left;
+}
+
+.foto {
+    flex: 0 0 80px;
+    margin-right: 20px;
+}
+
+.foto img {
+    width: 100%;
+}
+}
+
+/* pro desktop*/
+@media (min-width: 1000px) {
+    .tym {
+    flex-wrap: nowrap;
+}
+
+.osoba {
+    width: calc( (100% - 60px) / 4 );
+    display: block;
+    text-align: center;
+}
+
+.foto {
+    margin: 0;
+}
+
+.foto img {
+    width: auto;
+}
 }
